doc: aggiunta parte1

--- a/doc/progetto_is.tex
+++ b/doc/progetto_is.tex
@@ -48,6 +48,7 @@
 
 \tableofcontents
 
-%\include{chapters/description_protocol}
+\include{chapters/parte1}
+\include{chapters/parte2}
 
 \end{document}
