--- a/doc/progetto_is.tex
+++ b/doc/progetto_is.tex
@@ -11,15 +11,20 @@
 \usepackage{listings}
 \usepackage{xcolor}
 \usepackage[T1]{fontenc}
+\usepackage{listings}
+\usepackage{amsmath}
+\usepackage{graphicx}
+\usepackage{matlab-prettifier}
 
 \lstset { %
-    language=C++,
+    language=Matlab,
     frame=tb, % draw a frame at the top and bottom of the code block
     backgroundcolor=\color{black!5}, % set backgroundcolor
     basicstyle=\footnotesize,% basic font setting
     numbers=left, % display line numbers on the left
     tabsize=4, % tab space width
     breaklines=true,
+    stepnumber=2
 }
 
 \usepackage{caption}
